--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,8 @@
 .header_div {
     display: flex;
-    position: absolute;
+    justify-content: center;
     top: 0;
     align-items: center;
-    width: 80vw;
 }
 
 .header_title {
