--- a/src/components/MusicTrack/MusicTrack.module.css
+++ b/src/components/MusicTrack/MusicTrack.module.css
@@ -8,6 +8,11 @@
     border-radius: 5px 2em 2em 5px;
 }
 
+.actionDiv {
+    display: flex;
+    flex-direction: row;
+}
+
 .trackButton {
     display: flex;
     width: 3em;
@@ -18,25 +23,9 @@
 }
 
 .slider {
-    -webkit-appearance: none;
-    /* Override default CSS styles */
-    appearance: none;
-    width: 100%;
-    /* Full-width */
-    height: 25px;
-    /* Specified height */
-    background: #d3d3d3;
-    /* Grey background */
-    outline: none;
-    /* Remove outline */
-    opacity: 0.7;
-    /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: .2s;
-    /* 0.2 seconds transition on hover */
-    transition: opacity .2s;
+    margin-right: 2em;
 }
 
 .slider:hover {
     opacity: 1;
-    /* Fully shown on mouse-over */
 }
